syntax = "proto3";

option csharp_namespace = "LJMSCourse.PlatformService.Api.Protos";

service GrpcPlatformService {
    rpc GetAllPlatforms (GetAllPlatformsRequest) returns (stream GrpcPlatformModel);
}

message GetAllPlatformsRequest {}

message GrpcPlatformModel {
    int32 platformId = 1;
    string name = 2;
    string publisher = 3;
    string cost = 4;
}